post: update hello world content

--- a/src/content/posts/hello-world.mdx
+++ b/src/content/posts/hello-world.mdx
@@ -3,6 +3,4 @@ title: "hello, world"
 created_at: 2025-09-22
 ---
 
-
-
-First transmission.
+trying out a new personal blog setup that I can manage via cli
